# markdown-customblocks

./: .gitignore  .travis.yml  404.html  CHANGES.md  README.md  TODO.md  customblocks.py  customblocks_test.py  extra.css  index.html  mkdocs.yaml  mkdocs.yml  pyproject.toml  setup.cfg  setup.py  sitemap.xml
.github/workflows/: main.yml  python-publish.yml
CHANGES/: index.html
TODO/: index.html
css/: admonition.css  figure.css  linkcard.css  videowrapper.css
customblocks/: __init__.py  customblocks.py  customblocks_test.py  entrypoints.py  generators.py  generators_test.py  pageinfo.py  pageinfo_test.py  testutils.py  utils.py  utils_htmlmeta.py  utils_htmlmeta_test.py  utils_test.py
customblocks/utils/: __init__.py  fetcher.py  fetcher_test.py  hyperscript.py  hyperscript_test.py  image.py  image_test.py  pageinfo.py  pageinfo_test.py
defining-generators/: index.html
docs/: TODO.md  defining-generators.md  generators-admonition.md  generators-container.md  generators-facebook.md  generators-figure.md  generators-goteo.md  generators-instagram.md  generators-linkcard.md  generators-map.md  generators-mastodon.md  generators-peertube.md  generators-twitter.md  generators-verkami.md  generators-vimeo.md  generators-wikipedia.md  generators-youtube.md  inspiration.md  motivation.md
generators-admonition/: index.html
generators-container/: index.html
generators-facebook/: index.html
generators-figure/: index.html
generators-goteo/: index.html
generators-instagram/: index.html
generators-linkcard/: index.html
generators-map/: index.html
generators-mastodon/: index.html
generators-peertube/: index.html
generators-twitter/: index.html
generators-verkami/: index.html
generators-vimeo/: index.html
generators-wikipedia/: index.html
generators-youtube/: index.html
inspiration/: index.html
motivation/: index.html
search/: search_index.json
testdata/: ingresominimo.html
tutorial/: index.html
