[build-system]
requires = ["setuptools>=75", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "markdown-customblocks"
version = "1.5.1"
description='Python Markdown extension to add custom parametrizable and nestable blocks'
authors = [
    { name="David García Garzón", email="voki@canvoki.net" },
]
readme = "README.md"
requires-python = ">=3.8"
license = { file="LICENSE"}
keywords=["markdown","extension","customblocks","admonitions","container","figure","map","youtube","vimeo","twitter","facebook","instagram","verkami","goteo","mastodon","wikipedia","peertube"]

classifiers = [
	'Development Status :: 5 - Production/Stable',
	'Environment :: Console',
	'Intended Audience :: Developers',
	'Intended Audience :: Science/Research',
	'Intended Audience :: Other Audience',
	'License :: OSI Approved :: GNU Affero General Public License v3 or later (AGPLv3+)',
	'Operating System :: OS Independent',
	'Programming Language :: Python :: 3',
	'Programming Language :: Python :: 3.8',
	'Programming Language :: Python :: 3.9',
	'Programming Language :: Python :: 3.10',
	'Programming Language :: Python :: 3.11',
	'Programming Language :: Python :: 3.12',
	'Topic :: Internet :: WWW/HTTP :: Dynamic Content',
	'Topic :: Software Development :: Libraries :: Python Modules',
	'Topic :: Text Processing :: Filters',
	'Topic :: Text Processing :: Markup :: HTML',
]

dependencies = [
	'markdown',
	'yamlns>=0.11', # supports assertNsContains
	'beautifulsoup4',
	'decorator',
	'geocoder', # map
	'pytest', # testing
	'pytest-cov<4', # testing
	'responses', # testing
	#'mkdocs', # docs
	#'mkdocs-material', # docs
	'urllib3<2', # conflicts with requests
	'python-magic', # figure embed
	'pillow',
]

[project.urls]
Homepage = "https://vokimon.github.io/markdown-customblocks"
Documentation = "https://readthedocs.org"
Repository = "https://github.com/vokimon/markdown-customblocks"
Changelog = "https://github.com/vokimon/markdown-customblocks/blob/master/CHANGES.md"

[project.entry-points."markdown.extensions"]
customblocks = "customblocks:CustomBlocksExtension"

[project.entry-points."markdown.customblocks.generators"]
attention = "customblocks.generators:admonition"
caution = "customblocks.generators:admonition"
danger = "customblocks.generators:admonition"
error = "customblocks.generators:admonition"
hint = "customblocks.generators:admonition"
important = "customblocks.generators:admonition"
note = "customblocks.generators:admonition"
tip = "customblocks.generators:admonition"
warning = "customblocks.generators:admonition"
youtube = "customblocks.generators:youtube"
peertube = "customblocks.generators:peertube"
vimeo = "customblocks.generators:vimeo"
verkami = "customblocks.generators:verkami"
goteo = "customblocks.generators:goteo"
mastodon = "customblocks.generators:mastodon"
twitter = "customblocks.generators:twitter"
facebook = "customblocks.generators:facebook"
instagram = "customblocks.generators:instagram"
map = "customblocks.generators:map"
linkcard = "customblocks.generators:linkcard"
figure = "customblocks.generators:figure"
wikipedia = "customblocks.generators:wikipedia"

[tool.setuptools.packages]
find = {}

[tool.coverage.run]
relative_files = true
branch = true
omit = ["**/*test.py"]

[tool.pytest.ini_options]
addopts = "--cov=customblocks"


